load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bankPradyum",
    srcs = ["bankPradyum.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/workload/bankPradyum",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/timeutil",
        "//pkg/workload",
        "//pkg/workload/histogram",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_spf13_pflag//:pflag",
    ],
)
