load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workload_generator",
    srcs = [
        "constants.go",
        "ddl_generator.go",
        "generate_sql.go",
        "generator_schema_builder.go",
        "generator_types.go",
        "generator_utils.go",
        "make_generator.go",
        "run_utils.go",
        "schema_designs.go",
        "sqlConvert.go",
        "sql_utils.go",
        "workload.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/workload/workload_generator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/col/coldata",
        "//pkg/sql/parser",
        "//pkg/sql/parser/statements",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sem/tree/treecmp",
        "//pkg/sql/types",
        "//pkg/util/bufalloc",
        "//pkg/util/timeutil",
        "//pkg/workload",
        "//pkg/workload/histogram",
        "@com_github_cockroachdb_cockroach_go_v2//crdb",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lib_pq//:pq",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_pflag//:pflag",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "workload_generator_test",
    srcs = [
        "ddl_generator_test.go",
        "generator_schema_builder_test.go",
        "generator_utils_test.go",
        "make_generator_test.go",
        "parser_test.go",
        "sqlConvert_test.go",
        "sql_test.go",
        "try_parser_test.go",
    ],
    embed = [":workload_generator"],
    deps = [
        "//pkg/sql/lexbase",
        "//pkg/sql/parser",
        "//pkg/sql/randgen",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sem/tree/treebin",
        "//pkg/sql/sem/tree/treecmp",
        "//pkg/testutils",
        "//pkg/testutils/datapathutils",
        "//pkg/testutils/sqlutils",
        "//pkg/util/randutil",
        "@com_github_cockroachdb_datadriven//:datadriven",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
